# SZE-MOSZE-2020-GitCraft

./: .gitignore  Blood_Raven.json  Dark_Wanderer.json  Fallen.json  Game.cpp  Game.h  Hero.cpp  Hero.h  HeroTextRenderer.cpp  HeroTextRenderer.h  JSON.cpp  JSON.h  Makefile  Map.cpp  Map.h  MarkedMap.cpp  MarkedMap.h  Monster.cpp  Monster.h  ObserverTextRenderer.cpp  ObserverTextRenderer.h  PreparedGame.cpp  PreparedGame.h  PreparedGame.json  README.md  Renderer.cpp  Renderer.h  Report.md  TextRenderer.h  Zombie.json  _game_8h_source.html  _hero_8h_source.html  _j_s_o_n_8h_source.html  _map_8h_source.html  _marked_map_8h_source.html  _monster_8h_source.html  _prepared_game_8h_source.html  annotated.html  character.cpp  character.h  (+120 more)
.github/: main.yml
.github/workflows/: basic_output_test.yml  main.yml  pushdox.yml  unit_test.yml
docker/doxygen/: Dockerfile
docker/simple_io_test/: Dockerfile
docker/unittest/: Dockerfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+23 more)
unit_test/: CMakeLists.txt  PreparedGame_test.json  test_parser  test_parser.cpp
units/: Elf.json  Invalid.json  Orc.json  Troll.json
